...
        layout="@layout/internet_connection_error_dialog"
         app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        />

    <include
        android:id="@+id/starredProjectsActivity_viewLoadingDate"
        layout="@layout/loading_date_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
